# legged_state_estimator

./: .gitignore  CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt
bindings/python/inekf/: CMakeLists.txt  __init__.py  contact_estimator.cpp  noise_params.cpp  robot_model.cpp  schmitt_trigger.cpp  state_estimator.cpp  state_estimator_settings.cpp
bindings/python/legged_state_estimator/: CMakeLists.txt  __init__.py  pycontact_estimator.cpp  pylegged_state_estimator.cpp  pylegged_state_estimator_settings.cpp  pynoise_params.cpp  pyrobot_model.cpp
examples/: kinematics.cpp  landmarks.cpp
examples_python/: a1.py  a1_mpc.py  a1_simulator.py  contact_info.py  logistic_regression.py  mpc_factory.py
include/: InEKF.h  NoiseParams.h  Observations.h  RobotState.h
include/inekf/: InEKF.h  LieGroup.h  Observations.h  RobotState.h  contact_estimator.hpp  inekf.hpp  lie_group.hpp  low_pass_filter.hpp  macros.hpp  noise_params.hpp  observations.hpp  robot_model.hpp  robot_state.hpp  schmitt_trigger.hpp  state_estimator.hpp  state_estimator_settings.hpp
include/legged_state_estimator/: contact_estimator.hpp  legged_state_estimator.hpp  legged_state_estimator_settings.hpp  low_pass_filter.hpp  macros.hpp  robot_model.hpp
include/legged_state_estimator/inekf/: inekf.hpp  inekf_state.hpp  lie_group.hpp  noise_params.hpp  observations.hpp
src/: InEKF.cpp  LieGroup.cpp  NoiseParams.cpp  RobotState.cpp  contact_estimator.cpp  inekf.cpp  legged_state_estimator.cpp  legged_state_estimator_settings.cpp  lie_group.cpp  noise_params.cpp  robot_model.cpp  robot_state.cpp  schmitt_trigger.cpp  state_estimator.cpp  state_estimator_settings.cpp
src/inekf/: inekf.cpp  inekf_state.cpp  lie_group.cpp  noise_params.cpp
src/tests/: left_vs_right_error_dynamics.cpp
tests/: correction_speed.cpp  large_state_speed.cpp  left_vs_right_error_dynamics.cpp  legged_state_estimation.cpp  propagation_speed.cpp
